UCLALIB-226: fix text align of menu links in footer.

--- a/www/sites/all/themes/uclalib_omega/css/uclalib-omega.styles.css
+++ b/www/sites/all/themes/uclalib_omega/css/uclalib-omega.styles.css
@@ -141,7 +141,6 @@ a:hover {
 
 .l-colophon {
   font-size: 12px;
-  text-align: center;
 }
 .l-colophon a, .l-colophon a:visited {
   color: #3283be;
@@ -166,12 +165,16 @@ a:hover {
 .l-colophon h3 {
   margin-top: 0;
 }
-
+.l-colophon, .l-colophon .menu {
+  text-align: center;
+}
 @media (min-width: 768px) {
   .l-colophon, .l-colophon .menu {
     text-align: left;
   }
+}
 
+@media (min-width: 768px) {
   .l-region--colophon-first {
     border-right: 1px solid #a2a2a2;
   }
